[package]
name = "fadfada_curl"
version = "0.0.1-alpha.1"
edition = "2021"
rust-version = "1.56"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fadfada_curl"
path = "src/lib.rs"

[dependencies.fadfada]
git = "git://git.defalsify.org/fadfada"
#branch = "lash/wasm"
features = ["yaml","web2"]

[dependencies.curl]
version = "^0.4"

[dependencies.yaml-rust]
version = "~0.3"

[dependencies.log]
version = "~0.4"

[dependencies.env_logger]
version = "~0.9"

[dependencies.clap]
version = "^2.34"

[dev-dependencies.tempdir]
version = "^0.3"

[dependencies.hex]
version = "^0.4"

[dev-dependencies.url]
version = "^2.2"

[features]
sha256 = []
